AQUI PUEDO ESCRIBIRLES MI SEGUNDO COMENTARIO

--- a/history.txt
+++ b/history.txt
@@ -1,1 +1,3 @@
 Hola amigos aqui les comento del tamano y calidad de jugadores del cesde.07/29/2024
+
+aqui podemos agregarle su tamano original fue casi de 2 metros,11 pulgas.
