buenos mi cuarto y ultimo comentario tratando!!!

--- a/history.txt
+++ b/history.txt
@@ -3,3 +3,5 @@ Hola amigos aqui les comento del tamano y calidad de jugadores del cesde.07/29/2
 aqui podemos agregarle su tamano original fue casi de 2 metros,11 pulgas.
 
 bueno aqui podremos decir el mejor equipo de medellin es el NACIONAL 
+
+Quiero agradecerle a Dios por todas las oportunidades que me sigue dando para salir adelante.
