--- a/history.txt
+++ b/history.txt
@@ -5,3 +5,5 @@ aqui podemos agregarle su tamano original fue casi de 2 metros,11 pulgas.
 bueno aqui podremos decir el mejor equipo de medellin es el NACIONAL 
 
 Quiero agradecerle a Dios por todas las oportunidades que me sigue dando para salir adelante.
+
+todos podemoso estar deacuerdo que se acabaron las elecciones en venezuela.
