--- a/history.txt
+++ b/history.txt
@@ -6,4 +6,6 @@ bueno aqui podremos decir el mejor equipo de medellin es el NACIONAL
 
 Quiero agradecerle a Dios por todas las oportunidades que me sigue dando para salir adelante.
 
-todos podemoso estar deacuerdo que se acabaron las elecciones en venezuela.
+Dios acompaname en el camino y poder tener la posibilidad de obtener el trabajo en eeuu.
+voy conseguir ese trabajo en code plattoon a como de lugar.
+
