comentando de lo bonito que es la tecnologia

--- a/history.txt
+++ b/history.txt
@@ -9,3 +9,5 @@ Quiero agradecerle a Dios por todas las oportunidades que me sigue dando para sa
 Dios acompaname en el camino y poder tener la posibilidad de obtener el trabajo en eeuu.
 voy conseguir ese trabajo en code plattoon a como de lugar.
 
+tambien queria comentarles que la verdad estoy despertando 
+algo muy bonito en la rama de la tecnologia.
