expresando mis comentarios
porque se me da la gana

--- a/history.txt
+++ b/history.txt
@@ -11,3 +11,4 @@ voy conseguir ese trabajo en code plattoon a como de lugar.
 
 tambien queria comentarles que la verdad estoy despertando 
 algo muy bonito en la rama de la tecnologia.
+bueno caballero eso es todo por hoy 
