comente hola antes de aqui

--- a/history.txt
+++ b/history.txt
@@ -1,6 +1,6 @@
 Hola amigos aqui les comento del tamano y calidad de jugadores del cesde.07/29/2024
 
-aqui podemos agregarle su tamano original fue casi de 2 metros,11 pulgas.
+ hola aqui podemos agregarle su tamano original fue casi de 2 metros,11 pulgas.
 
 bueno aqui podremos decir el mejor equipo de medellin es el NACIONAL 
 
