--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-Hola amigos aqui les comento del tamano y calidad de jugadores del cesde.07/29/2024
+Anita sabe lo que tiene que hacer carajo.
+
+
+
+hola amigos aqui les comento del tamano y calidad de jugadores del cesde.07/29/2024
 
  hola aqui podemos agregarle su tamano original fue casi de 2 metros,11 pulgas.
 
